# zhenzhengge

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: api-test.yml  extension-build.yml  security.yml  web-build.yml
apps/api/: .env.example  README.md  conftest.py  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py  security.py
apps/api/app/api/v1/: __init__.py  router.py
apps/api/app/api/v1/endpoints/: audit.py  auth.py  brand_profiles.py  cases.py  drafts.py  evidence.py  health.py  intake.py  monitoring.py  notifications.py  runtime.py  templates.py
apps/api/app/core/: config.py  storage.py
apps/api/app/schemas/: brand_profiles.py  cases.py  common.py  drafts.py  evidence.py  intake.py  monitoring.py  notification_channels.py  templates.py
apps/api/app/services/: __init__.py  audit.py  brand_profiles.py  cases.py  drafts.py  evidence.py  hermes.py  intake.py  llm.py  monitoring.py  notifications.py  playwright.py  templates.py  timestamping.py
apps/api/scripts/: smoke_test.py
apps/api/tests/: test_api.py
apps/extension/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
apps/web/: .env.example  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts
docs/: architecture.mmd  competition-gap-checklist-2026-04-20.md  ip-hackathon-expert-summary.md  mofa-ip-preliminary-submission-guide.md  zhenzhengge-api-list.md  zhenzhengge-architecture-and-tasks.md  zhenzhengge-brand-kit.md  zhenzhengge-competition-doc.md  zhenzhengge-database-schema.md  zhenzhengge-delivery-status.md  zhenzhengge-flow-and-tech.md  zhenzhengge-information-architecture.md  zhenzhengge-llm-setup.md  zhenzhengge-open-source-shortlist.md  zhenzhengge-openapi.json  zhenzhengge-page-agent-assessment.md  zhenzhengge-prd.md  zhenzhengge-product-notes.md  zhenzhengge-project-package.md  zhenzhengge-sprint-breakdown.md  zhenzhengge-tech-selection.md  zhenzhengge-user-operation-flows.md  zzge-roadshow-ppt-build-spec-v1.md
docs/feishu-submission/: architecture-section.md  backend-architecture.mmd  conclusion.md  evidence-enhancement.md  feature-case.md  feature-draft.md  feature-intake.md  feature-monitoring.md  flow-section.md  flowchart.mmd  hermes-sequence.mmd  intro.md  public-doc-v2.md
output/doc/: ip-hackathon-expert-summary.docx  zhenzhengge-prd.docx  zhenzhengge-project-package.docx
output/playwright/: article-texts.json  crop0-dataurl.txt
scripts/: gen_architecture.py  gen_architecture_en.py  generate_ip_summary_doc.py
知识产权侵权文书模板/专利行政执法文书表格word版本/: 1 附件目录.docx  117 第一部分.docx  118 一、专利侵权纠纷案件用文书表格(知识产权局处理用).docx  119 专利侵权纠纷处理请求受理通知书.docx  120 专利侵权纠纷撤销案件通知书.docx  121 专利侵权纠纷处理请求不予受理通知书.docx  122 提交专利权评价报告实用新型检索报告通知书.docx  123 答辩通知书.docx  124-125 专利侵权纠纷案件调查笔录.docx  126 专利侵权纠纷案件抽样取证决定.docx  127 专利侵权纠纷案件抽样取证清单.docx  128 专利侵权纠纷案件证据登记保存决定.docx  129 专利侵权纠纷案件证据登记保存清单.docx  130 解除专利侵权纠纷案件证据登记保存决定.docx  131 解除专利侵权纠纷案件证据登记保存清单.docx  132 专利侵权纠纷案件现场检查笔录.docx  133 专利侵权纠纷案件中止处理通知书.docx  134 专利侵权纠纷案件不予中止处理通知书.docx  135 专利侵权纠纷案件恢复处理通知书.docx  136 专利侵权纠纷案件恢复处理通知书.docx  137 口头审理回执.docx  138 回避申请决定.docx  139-140 专利侵权纠纷案件口头审理笔录.docx  141 撤销专利侵权纠纷案件决定书.docx  142-143 专利侵权纠纷调解协议书.docx  144-145 专利侵权纠纷案件处理决定书.docx  146 送达回证.docx  147 专利侵权纠纷处理决定修改更正通知书.docx  148 专利侵权纠纷处理决定强制执行申请书.docx  149 二、专利侵权纠纷案件用文书表格 (知识产权局内部用）.docx  150 专利侵权纠纷案件立案审批表.docx  151 专利侵权纠纷案件调查取证审批表.docx  152 专利侵权纠纷案件证据登记保存审批表.docx  153 专利侵权纠纷案件合议笔录.docx  154 技术鉴定委托书.docx  155 专利侵权纠纷案件结案审批表.docx  156 三、专利侵权纠纷案件用文书表格(当事人用）.docx  157-158 专利侵权纠纷处理请求书.docx  159 接收当事人提交证据材料清单.docx  160 专利纠纷案件授权委托书.docx  (+131 more)
(+59 files in other folders)
