[project]
name = "zhenzhengge-api"
version = "0.1.0"
description = "FastAPI backend skeleton for 证证鸽"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.135.3",
  "uvicorn[standard]>=0.42.0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.uv]
package = true

