[project]
name = "zhenzhengge-api"
version = "0.1.0"
description = "FastAPI backend skeleton for 证证鸽"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.135.3",
  "httpx>=0.28.1",
  "openai>=1.0.0",
  "playwright>=1.55.0",
  "pytest>=8.0.0",
  "uvicorn[standard]>=0.42.0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "python-dotenv>=1.0.1",
]

[tool.uv]
package = true
