[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zhenzhengge-api"
version = "0.1.0"
description = "FastAPI backend skeleton for 证证鸽"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.135.3",
  "httpx>=0.28.1",
  "openai>=1.0.0",
  "playwright>=1.55.0",
  "pytest>=8.0.0",
  "uvicorn[standard]>=0.42.0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "python-dotenv>=1.0.1",
  "python-docx>=1.1.0",
  "tenacity>=9.0.0",
  "prometheus-client>=0.21.0",
  "structlog>=24.4.0",
]

[project.optional-dependencies]
# Observability extras; optional so local dev doesn't pull OTEL / Sentry
# unless explicitly enabled.
observability = [
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-httpx>=0.48b0",
  "opentelemetry-exporter-otlp>=1.27.0",
  "sentry-sdk[fastapi]>=2.18.0",
]
# Postgres adapter (Stage 8)
postgres = [
  "sqlalchemy[asyncio]>=2.0.35",
  "asyncpg>=0.30.0",
  "alembic>=1.13.3",
]
# Dev / test extras
dev = [
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-mock>=3.14.0",
  "ruff>=0.8.4",
  "mypy>=1.13.0",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning:pydantic.*",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
  "app/**/__pycache__/**",
  "tests/**",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["scripts/gen_architecture*.py"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # bugbear
  "UP",   # pyupgrade
  "SIM",  # simplify
  "RUF",  # ruff-specific
]
ignore = [
  "E501",  # line length (handled by formatter)
  "B008",  # function calls in defaults (FastAPI Depends)
  "UP007", # Optional[X] vs X | None (keep both for clarity)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B018"]
"app/core/storage*.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.mypy]
python_version = "3.13"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
files = ["app"]
